--- a/index.html
+++ b/index.html
@@ -21,8 +21,25 @@
 
     <!-- 파비콘(32*32) -->
     <link rel="shortcut icon" href="파비콘이미지경로(확장자는 ico, png 가능)" />
+   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="./css/animate.css" />
     <link rel="stylesheet" href="./css/index.css" />
+
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"
+    integrity="sha512-jGsMH83oKe9asCpkOVkBnUrDDTp8wl+adkB2D+//JtlxO4SrLoJdhbOysIFQJloQFD+C4Fl1rMsQZF76JjV0eQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<!-- 
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
   </head>
+
   <body>
     <div id="header">
       <div class="row cf">
@@ -70,13 +87,26 @@
           <div class="slide">
             <img src="./image/silde1.jpg" alt="" />
             <div class="text">
-              <h2>Solution System</h2>
+              <h2>Solution System 1</h2>
               <p>
                 탁월한 기술력을 바탕으로 고객의 비즈니스 지속 가능성을 돕습니다.
               </p>
               <a href="#">자세히보기</a>
             </div>
           </div>
+          <div class="slide">
+            <img src="./image/silde2.jpg" alt="" />
+            <div class="text">
+              <h2>Solution System 2</h2>
+              <p>
+                탁월한 기술력을 바탕으로 고객의 비즈니스 지속 가능성을 돕습니다.
+              </p>
+              <a href="#">자세히보기</a>
+            </div>
+          </div>
+        </div>
+        <div class="plapau">
+          <i class="fa-solid fa-pause"></i>
         </div>
       </div>
       <div class="business">
@@ -162,5 +192,31 @@
         </div>
       </div>
     </div>
+
+
+
+ 
+    <script>
+      $(".slideInner").slick({
+        autoplay: true, // 슬라이더 자동재생
+        dots: true, // 번호버튼 표시여부
+        autoplaySpeed: 4000, // 자동재생 시간 간격(ms 단위생략) 3초
+        speed: 300, //슬라이드 진출입 속도 0.3초
+        arrows: true, // 이전, 다음 버튼 표시여부
+        prevArrow:'<button class="slick-prev slick-arrow" aria-label="Previous" type="button"><i class="fa-solid fa-chevron-left"></i></button>',
+        nextArrow:'<button class="slick-next slick-arrow" aria-label="Next" type="button"><i class="fa-solid fa-chevron-right"></i></button>',
+      })
+      $(".slideOuter .plapau i").on("click", function(){
+        if ( $ (this).hasClass("fa-pause") ){
+          $(".slideInner").slick("slickPause");
+        $(this).removeClass("fa-pause").addClass("fa-play");
+        } else{
+          $(".slideInner").slick("slickPlay");
+        $(this).removeClass("fa-play").addClass("fa-pause");
+
+        }
+       
+      });
+    </script>
   </body>
 </html>
