--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="./css/animate.css" />
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/rwdindex.css" />
+
 
     <script
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"
@@ -45,12 +47,13 @@
       <div class="row cf">
         <h1>
           <a href="#">
-            <img
-              src="./image/워드프레스 기업홈페이지1 로고.png"
-              alt="company"
-            />
+          <span class="blind"> company </span>
           </a>
         </h1>
+        <div class="menuopen">
+          <span class="blind">메뉴열기</span>
+          <i class="fa-solid fa-bars"></i>
+        </div>
         <div id="nav">
           <ul class="depth1">
             <li>
