--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <body>
     <div id="header">
-      <div class="row cf">
+      <div class="row">
         <h1>
           <a href="#">
           <span class="blind"> company </span>
